<resources>
    <string name="app_name">GitMe</string>
    <string name="search">Search Your Favourite User</string>
    <string name="username">Username</string>
    <string name="link">link Url</string>
    <string name="title_home1">Find your</string>
    <string name="title_home2">Favourite User</string>
    <string name="fullName">Full Name</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="bio">Bio</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="repository">Repository</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="set_alarm_on">ON</string>
    <string name="set_alarm_off">OFF</string>
    <string name="set_language">languange</string>
    <string name="git_me">GIT ME</string>
    <string name="by">Created by</string>
    <string name="afifah">Afifah Nur Ariani</string>
    <string name="skip_intro">skip</string>
    <string name="next_intro">next</string>
    <string name="title_intro">Title Intro</string>
    <string name="title_intro_desc">Title Intro Desc</string>



</resources>