<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="20dp"
                    tools:src="@color/white"
                    app:civ_border_width="3dp"
                    app:civ_border_color="@android:color/white"/>

                <ToggleButton
                    android:id="@+id/btn_favourite_user"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/favourite_click"
                    android:contentDescription="@string/app_name" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_name"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullName"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:drawablePadding="6dp"
                android:text="@string/username"
                app:drawableStartCompat="@drawable/ic_person" />
            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#fff"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:drawablePadding="6dp"
                android:text="@string/location"
                app:drawableStartCompat="@drawable/ic_location" />
            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="#FFFF"
                android:drawablePadding="6dp"
                android:text="@string/company"
                app:drawableStartCompat="@drawable/ic_work" />

            <TextView
                android:id="@+id/tv_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textSize="14sp"
                android:textColor="#FFFF"
                android:drawablePadding="6dp"
                android:text="@string/bio"
                app:drawableStartCompat="@drawable/ic_snippet" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/grey">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:text="@string/followers"/>
                <TextView
                    android:id="@+id/tv_followers_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:text="@string/followers"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:text="@string/following"/>
                <TextView
                    android:id="@+id/tv_following_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:text="@string/following"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:text="@string/repository"/>
                <TextView
                    android:id="@+id/tv_repository_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:text="@string/repository"/>
            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:tabTextColor="@android:color/white"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="670dp"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>